--- a/css/responsive.css
+++ b/css/responsive.css
@@ -35,14 +35,16 @@
         width: 100%;
         display: flex;
         justify-content: center;
+        margin-bottom: 50px;
     }
 
     .why-us .col-right {
-        padding-left: 450px;
+        width: 100%;
     }
 
     .why-us li {
-        text-align: center;
+        text-align: left;
+        padding: 0 400px;
     }
 
     h1 {
